# neutrino-ddt

./: .gitignore  README.md  acinclude.m4  autogen.sh  autorun.sh  configure.ac  upgrade_version.pl
data/: Makefile.am  satellites.xml  terrestrial.xml
data/config/: Makefile.am  cables.xml  satellites.xml  terrestrial.xml
data/control/: Makefile.am  audioplayer.end  audioplayer.start  deepstandby.off  deepstandby.on  flash.start  inactivity.on  movieplayer.end  movieplayer.start  pictureviewer.end  pictureviewer.start  recording.end  recording.start  recording.timer  scan.start  scan.stop  standby.off  standby.on
data/control-arm/: Makefile.am  audioplayer.end  audioplayer.start  deepstandby.off  deepstandby.on  flash.start  inactivity.on  movieplayer.end  movieplayer.start  neutrino.start  pictureviewer.end  pictureviewer.start  recording.end  recording.start  recording.timer  scan.start  scan.stop  standby.off  standby.on
data/fonts/: Makefile.am
data/icons/: Makefile.am
data/inetradio/: radio-stations.xml
data/locale/: Makefile.am  deutsch.locale  english.locale
data/themes/: Makefile.am  Neutrino-3.0.theme
data/webradio/: Makefile.am
data/y-web/: Makefile.am  Y_About.yhtm  Y_Blocks.txt  Y_Boxcontrol_Bouquet_Editor_Main.yhtm  Y_Boxcontrol_Bouquets.yhtm  Y_Boxcontrol_Bouquets_popup.yhtm  Y_Boxcontrol_Menue.yhtm  Y_EPG.js  Y_EPG_Plus.yhtm  Y_Filemgr.yhtm  Y_Info_Help.yhtm  Y_Info_Menue.yhtm  Y_Live_Menue.yhtm  Y_Menue.yhtm  Y_Settings_Menue.yhtm  Y_Settings_automount.yhtm  Y_Settings_buttons.yhtm  Y_Settings_mount_liste.yhtm  Y_Settings_nhttpd.yhtm  Y_Settings_umount_liste.yhtm  Y_Settings_xmltv.yhtm  Y_Settings_yWeb.yhtm  Y_Settings_zapit.yhtm  Y_StreamInfo.yhtm  Y_Timer_Edit.yhtm  Y_Timer_List.yhtm  Y_Tools_Boxcontrol.yhtm  Y_Tools_Check_Install.yhtm  Y_Tools_Cmd.yhtm  Y_Tools_Menue.yhtm  Y_Tools_Screenshot.yhtm  Y_Tools_tvshot.yhtm  Y_Version.txt  Y_neutrino_Blocks.txt  Y_yweb.js  ywidget.js
data/y-web/images/: Makefile.am
data/zapit/: Makefile.am  bouquets.xml  services.xml
j00zeks-addendum/compilation/: make-j00zTrino.sh  neutrino.mk.patch
lib/: Makefile.am
lib/connection/: Makefile.am  basicclient.cpp  basicclient.h  basicmessage.h  basicserver.cpp  basicserver.h  basicsocket.cpp  basicsocket.h  messagetools.cpp  messagetools.h
lib/hardware/: audio.h  ca.h  dmx.h  playback.h  record.h  video.h
lib/jsoncpp/: jsoncpp.cpp
lib/libconfigfile/: configfile.cpp  configfile.h
lib/libcoolstream/: hardware_caps.cpp
lib/libdvbsub/: Debug.cpp  PacketQueue.cpp  dvbsub.cpp  dvbsub.h  dvbsubtitle.cpp  dvbsubtitle.h  helpers.cpp  helpers.hpp  tools.cpp  tools.h
lib/libeventserver/: Makefile.am  eventserver.cpp
lib/libiw/: iwlib.c  iwlib.h  iwscan.cpp  wireless.h
lib/liblcddisplay/: fontrenderer.cpp  fontrenderer.h  lcddisplay.cpp  lcddisplay.h
lib/libmd5sum/: getline.h  libmd5sum.c  libmd5sum.h  md5.c  md5.h  sys2.h  system.h
lib/libnet/: libnet.cpp  libnet.h  network_interfaces.cpp
lib/libtuxtxt/: libtuxtxt.cpp  teletext.h  tuxtxt.cpp  tuxtxt.h  tuxtxt_common.h  tuxtxt_def.h
lib/libupnpclient/: UPNPDevice.cpp  UPNPService.cpp  UPNPSocket.cpp  upnpclient.h
lib/luaclient/: luaclient.cpp
lib/sectionsdclient/: sectionsdMsg.h  sectionsdclient.cpp  sectionsdclient.h  sectionsdcontrol.cpp
lib/timerdclient/: Makefile.am  timerdclient.cpp  timerdclient.h  timerdmsg.h  timerdtypes.h
lib/xmltree/: gzstream.h  hashtab.c  hashtab.h  xmlinterface.cpp  xmlinterface.h  xmlparse.cpp  xmlparse.h  xmlrole.c  xmlrole.h  xmltimpl.c  xmltimpl.h  xmltok.c  xmltok.h  xmltree.cpp  xmltree.h
src/: Makefile.am  compatibility.h  create_rcsim_h.sh  drivertool.c  global.h  neutrino.cpp  neutrino.h  neutrinoMessages.h  neutrino_menue.cpp  neutrino_menue.h  plugin.h  rcsim.c
src/daemonc/: remotecontrol.cpp  (+1 more)
src/driver/: Makefile.am  audiofile.cpp  audiofile.h  audiometadata.cpp  audiometadata.h  audioplay.cpp  audioplay.h  colorgradient.cpp  colorgradient.h  display.h  fade.cpp  fade.h  fb_accel.cpp  fb_accel.h  fb_accel_arm.cpp  fb_accel_glfb.cpp  fb_accel_mips.cpp  fb_accel_sti_ddt.cpp  fb_accel_sti_ddt.h  fb_generic.cpp  fb_generic.h  fb_generic_sti_ddt.cpp  fb_generic_sti_ddt.h  fb_window.cpp  fb_window.h  fbaccel.cpp  fbaccel.h  file.cpp  file.h  fontrenderer.cpp  fontrenderer.h  framebuffer.cpp  framebuffer.h  framebuffer_ng.cpp  framebuffer_ng.h  genpsi.cpp  genpsi.h  lcd4l.cpp  lcd4l.h  lcdd.cpp  (+37 more)
src/driver/audiodec/: Makefile.am  basedec.cpp  basedec.h  cdrdec.cpp  cdrdec.h  crc.c  ffmpegdec.cpp  ffmpegdec.h  fft.c  fft.h  flacdec.cpp  flacdec.h  int_fft.c  mp3dec.cpp  mp3dec.h  oggdec.cpp  oggdec.h  tag.c  tag.h  vis.cpp  wavdec.cpp  wavdec.h
src/driver/pictureviewer/: Makefile.am  bmp.cpp  crw.cpp  fb_display.cpp  fb_display.h  gif.cpp  jpeg.cpp  nanosvgrast.h  pictureviewer.cpp  pictureviewer.h  picv_client_server.h  png.cpp  pv_config.h
(+510 files in other folders)
