installdir = $(CONTROLDIR)

install_DATA = \
	audioplayer.end \
	audioplayer.start \
	deepstandby.off \
	deepstandby.on \
	flash.start \
	inactivity.on \
	movieplayer.end \
	movieplayer.start \
	neutrino.start \
	recording.end \
	recording.start \
	recording.timer \
	scan.start \
	scan.stop \
	standby.off \
	standby.on

install-data-hook:
	chmod 0755 $(DESTDIR)$(CONTROLDIR)/audioplayer.end
	chmod 0755 $(DESTDIR)$(CONTROLDIR)/audioplayer.start
	chmod 0755 $(DESTDIR)$(CONTROLDIR)/deepstandby.off
	chmod 0755 $(DESTDIR)$(CONTROLDIR)/deepstandby.on
	chmod 0755 $(DESTDIR)$(CONTROLDIR)/inactivity.on
	chmod 0755 $(DESTDIR)$(CONTROLDIR)/flash.start
	chmod 0755 $(DESTDIR)$(CONTROLDIR)/movieplayer.end
	chmod 0755 $(DESTDIR)$(CONTROLDIR)/movieplayer.start
	chmod 0755 $(DESTDIR)$(CONTROLDIR)/neutrino.start
	chmod 0755 $(DESTDIR)$(CONTROLDIR)/recording.end
	chmod 0755 $(DESTDIR)$(CONTROLDIR)/recording.start
	chmod 0755 $(DESTDIR)$(CONTROLDIR)/recording.timer
	chmod 0755 $(DESTDIR)$(CONTROLDIR)/scan.start
	chmod 0755 $(DESTDIR)$(CONTROLDIR)/scan.stop
	chmod 0755 $(DESTDIR)$(CONTROLDIR)/standby.off
	chmod 0755 $(DESTDIR)$(CONTROLDIR)/standby.on
