installdir = $(PRIVATE_HTTPDDIR)/images

install_DATA =	accept.png \
		alert.gif \
		arrowdown.png \
		arrowleft.png \
		arrowright.png \
		arrowup.png \
		audiobar.png \
		blank.gif \
		check_green.png \
		comment.png \
		cross.png \
		elist.png \
		epg.png \
		exlink.gif \
		fb.png \
		ftype_file.gif \
		ftype_folder.gif \
		ftype_link.gif \
		fullscreen.png \
		help.gif \
		hidden.png \
		info.png \
		inlink.gif \
		key.png \
		live.png \
		lock.png \
		modify.png \
		new.png \
		ok.gif \
		popup.png \
		properties.png \
		radio.png \
		record.png \
		reload.png \
		remove.png \
		rename.gif \
		saveall.png \
		save.png \
		smallwait.gif \
		snapshot.png \
		stop.png \
		streaminfo.png \
		time_add.png \
		time_down.png \
		timer.gif \
		time_up.png \
		tux-yweb.png \
		unlock.png \
		visible.png \
		vlc.png \
		volumedown.png \
		volumemute.png \
		volumeunmute.png \
		volumeup.png \
		wait.gif \
		webtv.png \
		wget.png \
		x_red.png \
		zap.png

if BOXTYPE_ARMBOX
install_DATA += rc_ax_hd51.png \
		rc_mutant_hd51.png \
		rc_wwio_bre2ze4k.png \
		rc_zgemma_h7.png
endif

if BOXMODEL_VUPLUS_ALL
install_DATA += rc_vu_solo4k.png
endif

if BOXTYPE_SPARK
install_DATA += rc_spark_old.jpg \
		rc_spark_new.jpg
endif

if BOXTYPE_DUCKBOX
install_DATA += rc_910.jpg \
		rc_913.jpg
endif

# file manager
install_DATA +=	chmod.png \
		copy.gif \
		cut.png \
		dir_up.png \
		download.png \
		film.png \
		folder_add.png \
		ftype_file.png \
		ftype_folder.png \
		ftype_link.png \
		home.png \
		package.png \
		page_edit.png \
		paste.gif \
		picture.png \
		text.png \
		upload.png \
		work.gif
